[package]
name = "ltbl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
hueclient = "0.4.2"
image = "0.24.4"
imagequant = "4.0.4"
palette = "0.6.1"
